# liRoulette2

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  run.bash  test-conway.sh
contract/: Cargo.toml
contract/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: chainPool.json  rooms.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BettingTable.tsx  GameHistory.tsx  ModeSelection.tsx  PlayerInfo.tsx  PokerChip.tsx  RealisticWheel.tsx  ResultPopup.tsx  RouletteWheel.tsx  WalletConnect.tsx
frontend/src/contexts/: LineraContext.tsx
frontend/src/hooks/: useGame.ts  useLinera.ts  useSounds.ts
frontend/src/types/: chainPool.ts  rooms.ts
